Issue #451: add LineLength to checkstyle config